Codeblock/wrapping fixes.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -871,7 +871,6 @@ code {
   color: #d14;
   background-color: #f7f7f9;
   border: 1px solid #e1e1e8;
-  white-space: nowrap;
 }
 
 pre {
